--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -30,7 +30,7 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 
   @include mobile {
     width: 480px;
