--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
+  transition: background-color var(--duration) var(--timing-function-cubic);
 }
 @media screen and (min-width: 768px) {
   .menu-open-btn {
@@ -68,6 +69,7 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
+  transition: background-color var(--duration) var(--timing-function-cubic);
 }
 
 .menu-close-btn:hover .menu-close-btn__menu-icon, .menu-close-btn:focus .menu-close-btn__menu-icon {
@@ -638,7 +640,7 @@ img {
 
 .hero {
   background-color: #c4c4c4;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-hero-bg-mob.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/img-hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -649,7 +651,7 @@ img {
 }
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-hero-bg-mob-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/img-hero-bg-mob-2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
@@ -659,19 +661,19 @@ img {
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-hero-bg-tab-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/img-hero-bg-tab-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-hero-bg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/img-hero-bg.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-hero-bg-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/img-hero-bg-2x.jpg);
   }
 }
 
@@ -1117,11 +1119,11 @@ img {
   position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1); /*scale показыает точку с которой будет пояляться */
+  transform: translate(-50%, -50%) scale(1);
   width: calc(100% - 30px);
   max-width: 450px;
   height: 609px;
-  background-color: #ffffff;
+  background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform var(--duration) var(--timing-function-cubic);
@@ -1130,7 +1132,7 @@ img {
 @media screen and (min-width: 1200px) {
   .modal-window {
     width: 528px;
-    min-width: 528px;
+    max-width: 528px;
     height: 581px;
   }
 }
