--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -29,6 +29,8 @@
     display: none;
   }
 
+  transition: background-color var(--duration) var(--timing-function-cubic);
+
 }
 
 .menu-open-btn__menu-icon {
@@ -48,6 +50,8 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
+  transition: background-color var(--duration) var(--timing-function-cubic);
+
 }
 
 .menu-close-btn__menu-icon {
