--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -13,20 +13,20 @@
   position: relative;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1); /*scale показыает точку с которой будет пояляться */
+  transform: translate(-50%, -50%) scale(1);
   width: calc(100% - 30px);
   max-width: 450px;
   height: 609px;
-  background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
+    0px 2px 1px rgb(0 0 0 / 20%);
   border-radius: 4px;
   transition: transform var(--duration) var(--timing-function-cubic);
   padding: 40px;
 
   @include desktop {
     width: 528px;
-    min-width: 528px;
+    max-width: 528px;
     height: 581px;
   }
 
@@ -34,7 +34,6 @@
     /* закрытое окно модалки */
     transform: translate(-50%, -50%) scale(0); /* плавное появление модалки */
   }
-
 }
 
 .modal-window__btn {
@@ -79,8 +78,7 @@
   color: var(--main-title-color);
   margin-bottom: 12px;
 
-@include desktop{
-  line-height: calc(23 / 20);
-}
-  
+  @include desktop {
+    line-height: calc(23 / 20);
+  }
 }
