--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -24,13 +24,12 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
+  transition: opacity var(--duration) var(--timing-function-cubic),
+  visibility var(--duration) var(--timing-function-cubic);
 
-  @include tablet{
+  @include tablet {
     display: none;
   }
-
-  transition: background-color var(--duration) var(--timing-function-cubic);
-
 }
 
 .menu-open-btn__menu-icon {
@@ -51,7 +50,6 @@
   height: 40px;
   background-color: transparent;
   transition: background-color var(--duration) var(--timing-function-cubic);
-
 }
 
 .menu-close-btn__menu-icon {
@@ -140,7 +138,6 @@
   padding-left: 10px;
   padding-right: 10px;
 
-  
   .mob-menu-soc__item:first-child & {
     padding-left: 0;
   }
