--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -4,8 +4,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity var(--duration) var(--timing-function-cubic),
-    visibility var(--duration) var(--timing-function-cubic);
+  /* transition: transform var(--duration) var(--timing-function-cubic); */
 }
 
 .modal-window {
@@ -21,8 +20,6 @@
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
     0px 2px 1px rgb(0 0 0 / 20%);
   border-radius: 4px;
-  transition: transform var(--duration) var(--timing-function-cubic);
-  padding: 40px;
 
   @include desktop {
     width: 528px;
