--- a/css/main.css
+++ b/css/main.css
@@ -41,13 +41,16 @@
   flex-direction: column;
   justify-content: space-between;
 }
+.mob-menu.is-hidden .mob-menu-container {
+  /* закрытое окно модалки */
+  transform: translate(-50%, -50%) scale(0); /* плавное появление модалки */
+}
 
 .menu-open-btn {
   padding: 0;
   width: 40px;
   height: 40px;
   background-color: transparent;
-  transition: opacity var(--duration) var(--timing-function-cubic), visibility var(--duration) var(--timing-function-cubic);
 }
 @media screen and (min-width: 768px) {
   .menu-open-btn {
@@ -69,7 +72,6 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
-  transition: background-color var(--duration) var(--timing-function-cubic);
 }
 
 .menu-close-btn:hover .menu-close-btn__menu-icon, .menu-close-btn:focus .menu-close-btn__menu-icon {
@@ -335,7 +337,7 @@ img {
 }
 
 .registration-form__title {
-  /* position: relative; */
+  position: relative;
   display: block;
   font-weight: 400;
   font-size: 12px;
@@ -1111,21 +1113,23 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  /* transition: transform var(--duration) var(--timing-function-cubic); */
+  transition: opacity var(--duration) var(--timing-function-cubic), visibility var(--duration) var(--timing-function-cubic);
 }
 
 .modal-window {
   /* открытое окно модалки */
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1); /*scale показыает точку с которой будет пояляться */
   width: calc(100% - 30px);
   max-width: 450px;
   height: 609px;
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: transform var(--duration) var(--timing-function-cubic);
+  padding: 40px;
 }
 @media screen and (min-width: 1200px) {
   .modal-window {
