--- a/sass/components/_registration.scss
+++ b/sass/components/_registration.scss
@@ -7,7 +7,7 @@
 }
 
 .registration-form__title {
-  /* position: relative; */
+  position: relative;
   display: block;
   font-weight: 400;
   font-size: 12px;
