--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -9,6 +9,7 @@
   z-index: 2;
   padding-top: 10px;
   padding-bottom: 48px;
+
 }
 
 .mob-menu-container {
@@ -17,6 +18,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  
+  .mob-menu.is-hidden & {
+    /* закрытое окно модалки */
+    transform: translate(-50%, -50%) scale(0); /* плавное появление модалки */
+  }
 }
 
 .menu-open-btn {
@@ -24,8 +30,6 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
-  transition: opacity var(--duration) var(--timing-function-cubic),
-  visibility var(--duration) var(--timing-function-cubic);
 
   @include tablet {
     display: none;
@@ -49,7 +53,6 @@
   width: 40px;
   height: 40px;
   background-color: transparent;
-  transition: background-color var(--duration) var(--timing-function-cubic);
 }
 
 .menu-close-btn__menu-icon {
