--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -4,22 +4,26 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  /* transition: transform var(--duration) var(--timing-function-cubic); */
+    transition: opacity var(--duration) var(--timing-function-cubic),
+    visibility var(--duration) var(--timing-function-cubic);
+
 }
 
 .modal-window {
   /* открытое окно модалки */
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1); /*scale показыает точку с которой будет пояляться */
   width: calc(100% - 30px);
   max-width: 450px;
   height: 609px;
-  background-color: #fff;
-  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
-    0px 2px 1px rgb(0 0 0 / 20%);
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: transform var(--duration) var(--timing-function-cubic);
+  padding: 40px;
 
   @include desktop {
     width: 528px;
