--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   background-color: #c4c4c4;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url("/images/img-hero-bg-mob.jpg");
+    url("../images/img-hero-bg-mob.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -11,7 +11,7 @@
   padding-bottom: 118px;
   @include retina {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url("/images/img-hero-bg-mob-2x.jpg");
+      url("../images/img-hero-bg-mob-2x.jpg");
   }
 
   @include tablet {
@@ -19,16 +19,16 @@
       url("../images/img-hero-bg-tab.jpg");
     @include retina {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../../images/img-hero-bg-tab-2x.jpg");
+        url("../images/img-hero-bg-tab-2x.jpg");
     }
   }
 
   @include desktop {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url("../../images/img-hero-bg.jpg");
+      url("../images/img-hero-bg.jpg");
     @include retina {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../../images/img-hero-bg-2x.jpg");
+        url("../images/img-hero-bg-2x.jpg");
     }
     padding-top: 200px;
     padding-bottom: 200px;
