--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -9,22 +9,24 @@
   z-index: 2;
   padding-top: 10px;
   padding-bottom: 48px;
-
+  transition: opacity var(--duration) var(--timing-function-cubic),
+  visibility var(--duration) var(--timing-function-cubic);
 
 }
 
 .mob-menu-container {
+  /* position: absolute; */
   padding-left: 40px;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  transform: translate-z(-50%, -50%) scale(1);
-  transition: transform var(--duration) var(--timing-function-cubic);
+  transform: translate(0%, 0%) scale(1);
+  transition: translateY var(--duration) var(--timing-function-cubic);
 
   .mob-menu.is-hidden & {
     /* закрытое окно модалки */
-    transform: translate-z(-50%, -50%) scale(0); /* плавное появление модалки */
+    transform: translate(0%, 0%) scale(0); /* плавное появление модалки */
   }
 }
 
